--- a/00_tensorflow_fundmentals.ipynb
+++ b/00_tensorflow_fundmentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMI7pCcbz+fkFERVyFMXa0",
+      "authorship_tag": "ABX9TyNUHIb2E6NVwVP6kRwtXw+M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,341 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [],
       "metadata": {
-        "id": "kFggPIYOrsvt"
+        "id": "ftYDgZvXuCRl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# In this notebook we are going to cover some of the most fundamental concepts of tensorflow\n",
+        "\n",
+        "More specifically, we are going to cover\n",
+        "\n",
+        "* introduction to tensors\n",
+        "* Getting information from tensors\n",
+        "* Manipulating tensors\n",
+        "* tensors & Numpy\n",
+        "* Using @tf.function (a way to speed up python functions)\n",
+        "* Using GPUs with Tensorflow (or TPUs)\n",
+        "* Exercises\n"
+      ],
+      "metadata": {
+        "id": "YVaf5WOTuFHL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Introduction to Tensors"
+      ],
+      "metadata": {
+        "id": "glp5tcvlvjHN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import Tensorflow\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "print (tf.__version__)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rILuM8AOwLUC",
+        "outputId": "264b4a53-b075-48d2-b1bd-a19c9335f3ed"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.15.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create tensors with tf.constant\n",
+        "\n",
+        "scaler = tf.constant(7)\n",
+        "scaler"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gUWQfXwOwQvB",
+        "outputId": "cc2ed739-629f-42d1-ca7b-c785152bb28c"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=int32, numpy=7>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check the number of diemsnions\n",
+        "\n",
+        "scaler.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BKJda95DwqrX",
+        "outputId": "05a5b8b8-d29f-4e9d-c811-d822a7114221"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create and vector\n",
+        "\n",
+        "vector = tf.constant([10,10])\n",
+        "vector"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Aaz1Lj4cw8eV",
+        "outputId": "c3bcc52f-0589-414c-a5ca-02175fd16f44"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([10, 10], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# check the dimension\n",
+        "vector.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H_w7cGeSxYIJ",
+        "outputId": "1f70a034-b69b-499d-ce18-cd9925d65666"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a matrix\n",
+        "\n",
+        "matrix = tf.constant ([[10,10],[3,2]])\n",
+        "matrix.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J-TZbvDJxaES",
+        "outputId": "82c9ad37-851a-44a9-d66d-0c3408cf5665"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create another matrix, dtype related to space\n",
+        "\n",
+        "another_matrix = tf.constant ([[10.,10.],[3.,2.],[12.,10.]], dtype=tf.float16)\n",
+        "another_matrix"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y2Hloy9vxpoS",
+        "outputId": "e01a6c2b-12aa-442b-a4fd-213b888af0ec"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 2), dtype=float16, numpy=\n",
+              "array([[10., 10.],\n",
+              "       [ 3.,  2.],\n",
+              "       [12., 10.]], dtype=float16)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "another_matrix.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dPysygAXyKnb",
+        "outputId": "d80bef9d-59e4-4ac7-dc0a-2e5aec989864"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor = tf.constant([[[1,2,3], [4,5,6]], [[2,3,4], [8,9,10]], [[3,4,5],[5,6,7]]])\n",
+        "tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bTPasm2WyeL5",
+        "outputId": "300b0c41-3de8-4f98-9fe4-38ef5fe3444d"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 2, 3), dtype=int32, numpy=\n",
+              "array([[[ 1,  2,  3],\n",
+              "        [ 4,  5,  6]],\n",
+              "\n",
+              "       [[ 2,  3,  4],\n",
+              "        [ 8,  9, 10]],\n",
+              "\n",
+              "       [[ 3,  4,  5],\n",
+              "        [ 5,  6,  7]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3X_gzKoYyPzW",
+        "outputId": "d16b0684-150c-4844-e422-db081ca4b0e8"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "What we have created so far\n",
+        "* scaler: single number\n",
+        "* vector: a number with direction (wind speed and direction)\n",
+        "* matrix: a 2-dimensional array of numbers\n",
+        "* Tensor: an n-dimensional array of numbers (when n can be any number, a 0-dimensional tensor is a scaler, a 1-dimensional tensor is a vector)"
+      ],
+      "metadata": {
+        "id": "SOgKs0hOzkNa"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
